<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite">

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leftarrow" />

    <TextView
        android:id="@+id/btnShare"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/share_link_and_invite_friends"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:background="@color/teal_200"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView35" />

    <TextView
        android:id="@+id/btnTM"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="Time management"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btnShare"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnShare"
        app:layout_constraintTop_toBottomOf="@+id/btnShare" />

    <TextView
        android:id="@+id/btnMW"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/my_wallet"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btnTM"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnTM"
        app:layout_constraintTop_toBottomOf="@+id/btnTM" />

    <TextView
        android:id="@+id/btnCT"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/change_theme"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMW" />

    <TextView
        android:id="@+id/textView92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView35" />

    <TextView
        android:id="@+id/btnLa"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btnCT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCT" />

    <TextView
        android:id="@+id/tvDA"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLa"
        app:layout_constraintTop_toBottomOf="@+id/btnLa"
        />

    <TextView
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/logout"
        android:textSize="26sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvDA"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDA"
        app:layout_constraintTop_toBottomOf="@+id/tvDA" />

    <TextView
        android:id="@+id/btnAbout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="@+id/btnLogout"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />
</androidx.constraintlayout.widget.ConstraintLayout>